Implement delays file download

--- a/src/server/home.html
+++ b/src/server/home.html
@@ -133,6 +133,9 @@
     <div id="chartContainerAverage" style="height: 300px; width: 100%;"></div>
     <div id="chartContainerMaximum" style="height: 300px; width: 100%;"></div>
     <div id="chartContainerMinimum" style="height: 300px; width: 100%;"></div>
+    <div style="position: absolute; top: 20px; right: 20px">
+        <a href="/delays" target="_blank">Export to CSV</a>
+    </div>
     <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>    
 </body>
 </html>
